--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -833,6 +833,8 @@ data:
                         - entity: input_number.motion_auto_off_bedroom_morning_weekday
                         - entity: input_boolean.bedroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bedroom_transition_time
+                          name: Transition Time
     
               # Bedroom Weekday Day Configuration
               - type: conditional
@@ -882,6 +884,8 @@ data:
                         - entity: input_number.motion_auto_off_bedroom_day_weekday
                         - entity: input_boolean.bedroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bedroom_transition_time
+                          name: Transition Time
     
               # Bedroom Weekday Evening Configuration
               - type: conditional
@@ -931,6 +935,8 @@ data:
                         - entity: input_number.motion_auto_off_bedroom_evening_weekday
                         - entity: input_boolean.bedroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bedroom_transition_time
+                          name: Transition Time
     
               # Bedroom Weekday Night Configuration
               - type: conditional
@@ -980,6 +986,8 @@ data:
                         - entity: input_number.motion_auto_off_bedroom_night_weekday
                         - entity: input_boolean.bedroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bedroom_transition_time
+                          name: Transition Time
     
               # Bedroom Weekend Morning Configuration
               - type: conditional
@@ -1029,6 +1037,8 @@ data:
                         - entity: input_number.motion_auto_off_bedroom_morning_weekend
                         - entity: input_boolean.bedroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bedroom_transition_time
+                          name: Transition Time
     
               # Bedroom Weekend Day Configuration
               - type: conditional
@@ -1078,6 +1088,8 @@ data:
                         - entity: input_number.motion_auto_off_bedroom_day_weekend
                         - entity: input_boolean.bedroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bedroom_transition_time
+                          name: Transition Time
     
               # Bedroom Weekend Evening Configuration
               - type: conditional
@@ -1127,6 +1139,8 @@ data:
                         - entity: input_number.motion_auto_off_bedroom_evening_weekend
                         - entity: input_boolean.bedroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bedroom_transition_time
+                          name: Transition Time
     
               # Bedroom Weekend Night Configuration
               - type: conditional
@@ -1225,6 +1239,8 @@ data:
                         - entity: input_number.motion_auto_off_living_room_morning_weekday
                         - entity: input_boolean.living_room_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.living_room_transition_time
+                          name: Transition Time
     
               # Living Room Weekday Day Configuration
               - type: conditional
@@ -1274,6 +1290,8 @@ data:
                         - entity: input_number.motion_auto_off_living_room_day_weekday
                         - entity: input_boolean.living_room_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.living_room_transition_time
+                          name: Transition Time
     
               # Living Room Weekday Evening Configuration
               - type: conditional
@@ -1323,6 +1341,8 @@ data:
                         - entity: input_number.motion_auto_off_living_room_evening_weekday
                         - entity: input_boolean.living_room_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.living_room_transition_time
+                          name: Transition Time
     
               # Living Room Weekday Night Configuration
               - type: conditional
@@ -1372,6 +1392,8 @@ data:
                         - entity: input_number.motion_auto_off_living_room_night_weekday
                         - entity: input_boolean.living_room_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.living_room_transition_time
+                          name: Transition Time
     
               # Living Room Weekend Morning Configuration
               - type: conditional
@@ -1421,6 +1443,8 @@ data:
                         - entity: input_number.motion_auto_off_living_room_morning_weekend
                         - entity: input_boolean.living_room_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.living_room_transition_time
+                          name: Transition Time
     
               # Living Room Weekend Day Configuration
               - type: conditional
@@ -1470,6 +1494,8 @@ data:
                         - entity: input_number.motion_auto_off_living_room_day_weekend
                         - entity: input_boolean.living_room_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.living_room_transition_time
+                          name: Transition Time
     
               # Living Room Weekend Evening Configuration
               - type: conditional
@@ -1519,6 +1545,8 @@ data:
                         - entity: input_number.motion_auto_off_living_room_evening_weekend
                         - entity: input_boolean.living_room_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.living_room_transition_time
+                          name: Transition Time
     
               # Living Room Weekend Night Configuration
               - type: conditional
@@ -1617,6 +1645,8 @@ data:
                         - entity: input_number.motion_auto_off_kitchen_morning_weekday
                         - entity: input_boolean.kitchen_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.kitchen_transition_time
+                          name: Transition Time
     
               # Kitchen Weekday Day Configuration
               - type: conditional
@@ -1666,6 +1696,8 @@ data:
                         - entity: input_number.motion_auto_off_kitchen_day_weekday
                         - entity: input_boolean.kitchen_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.kitchen_transition_time
+                          name: Transition Time
     
               # Kitchen Weekday Evening Configuration
               - type: conditional
@@ -1715,6 +1747,8 @@ data:
                         - entity: input_number.motion_auto_off_kitchen_evening_weekday
                         - entity: input_boolean.kitchen_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.kitchen_transition_time
+                          name: Transition Time
     
               # Kitchen Weekday Night Configuration
               - type: conditional
@@ -1764,6 +1798,8 @@ data:
                         - entity: input_number.motion_auto_off_kitchen_night_weekday
                         - entity: input_boolean.kitchen_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.kitchen_transition_time
+                          name: Transition Time
     
               # Kitchen Weekend Morning Configuration
               - type: conditional
@@ -1813,6 +1849,8 @@ data:
                         - entity: input_number.motion_auto_off_kitchen_morning_weekend
                         - entity: input_boolean.kitchen_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.kitchen_transition_time
+                          name: Transition Time
     
               # Kitchen Weekend Day Configuration
               - type: conditional
@@ -1862,6 +1900,8 @@ data:
                         - entity: input_number.motion_auto_off_kitchen_day_weekend
                         - entity: input_boolean.kitchen_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.kitchen_transition_time
+                          name: Transition Time
     
               # Kitchen Weekend Evening Configuration
               - type: conditional
@@ -1911,6 +1951,8 @@ data:
                         - entity: input_number.motion_auto_off_kitchen_evening_weekend
                         - entity: input_boolean.kitchen_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.kitchen_transition_time
+                          name: Transition Time
     
               # Kitchen Weekend Night Configuration
               - type: conditional
@@ -2009,6 +2051,8 @@ data:
                         - entity: input_number.motion_auto_off_bathroom_morning_weekday
                         - entity: input_boolean.bathroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bathroom_transition_time
+                          name: Transition Time
     
               # Bathroom Weekday Day Configuration
               - type: conditional
@@ -2058,6 +2102,8 @@ data:
                         - entity: input_number.motion_auto_off_bathroom_day_weekday
                         - entity: input_boolean.bathroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bathroom_transition_time
+                          name: Transition Time
     
               # Bathroom Weekday Evening Configuration
               - type: conditional
@@ -2107,6 +2153,8 @@ data:
                         - entity: input_number.motion_auto_off_bathroom_evening_weekday
                         - entity: input_boolean.bathroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bathroom_transition_time
+                          name: Transition Time
     
               # Bathroom Weekday Night Configuration
               - type: conditional
@@ -2156,6 +2204,8 @@ data:
                         - entity: input_number.motion_auto_off_bathroom_night_weekday
                         - entity: input_boolean.bathroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bathroom_transition_time
+                          name: Transition Time
     
               # Bathroom Weekend Morning Configuration
               - type: conditional
@@ -2205,6 +2255,8 @@ data:
                         - entity: input_number.motion_auto_off_bathroom_morning_weekend
                         - entity: input_boolean.bathroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bathroom_transition_time
+                          name: Transition Time
     
               # Bathroom Weekend Day Configuration
               - type: conditional
@@ -2254,6 +2306,8 @@ data:
                         - entity: input_number.motion_auto_off_bathroom_day_weekend
                         - entity: input_boolean.bathroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bathroom_transition_time
+                          name: Transition Time
     
               # Bathroom Weekend Evening Configuration
               - type: conditional
@@ -2303,6 +2357,8 @@ data:
                         - entity: input_number.motion_auto_off_bathroom_evening_weekend
                         - entity: input_boolean.bathroom_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.bathroom_transition_time
+                          name: Transition Time
     
               # Bathroom Weekend Night Configuration
               - type: conditional
@@ -2401,6 +2457,8 @@ data:
                         - entity: input_number.motion_auto_off_hallway_morning_weekday
                         - entity: input_boolean.hallway_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.hallway_transition_time
+                          name: Transition Time
     
               # Hallway Weekday Day Configuration
               - type: conditional
@@ -2450,6 +2508,8 @@ data:
                         - entity: input_number.motion_auto_off_hallway_day_weekday
                         - entity: input_boolean.hallway_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.hallway_transition_time
+                          name: Transition Time
     
               # Hallway Weekday Evening Configuration
               - type: conditional
@@ -2499,6 +2559,8 @@ data:
                         - entity: input_number.motion_auto_off_hallway_evening_weekday
                         - entity: input_boolean.hallway_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.hallway_transition_time
+                          name: Transition Time
     
               # Hallway Weekday Night Configuration
               - type: conditional
@@ -2548,6 +2610,8 @@ data:
                         - entity: input_number.motion_auto_off_hallway_night_weekday
                         - entity: input_boolean.hallway_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.hallway_transition_time
+                          name: Transition Time
     
               # Hallway Weekend Morning Configuration
               - type: conditional
@@ -2597,6 +2661,8 @@ data:
                         - entity: input_number.motion_auto_off_hallway_morning_weekend
                         - entity: input_boolean.hallway_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.hallway_transition_time
+                          name: Transition Time
     
               # Hallway Weekend Day Configuration
               - type: conditional
@@ -2646,6 +2712,8 @@ data:
                         - entity: input_number.motion_auto_off_hallway_day_weekend
                         - entity: input_boolean.hallway_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.hallway_transition_time
+                          name: Transition Time
     
               # Hallway Weekend Evening Configuration
               - type: conditional
@@ -2695,6 +2763,8 @@ data:
                         - entity: input_number.motion_auto_off_hallway_evening_weekend
                         - entity: input_boolean.hallway_smooth_transition
                           name: Smooth Transition
+                        - entity: input_number.hallway_transition_time
+                          name: Transition Time
     
               # Hallway Weekend Night Configuration
               - type: conditional
