--- a/gitops/apps/home-assistant/scripts-configmap.yaml
+++ b/gitops/apps/home-assistant/scripts-configmap.yaml
@@ -765,9 +765,10 @@ data:
                           data:
                             name: "smooth_transition"
                             message: "Lights are off but auto_on=True - turning on lights first"
-                        - service: "light.turn_on"
+                        # Turn on lights using the current scene to get the right state
+                        - service: "scene.turn_on"
                           target:
-                            entity_id: "{{ scene_lights }}"
+                            entity_id: "{{ current_scene }}"
                         - delay:
                             seconds: 2
                     - conditions: "{{ not lights_on and not (auto_on | default(false) | bool) }}"
@@ -780,17 +781,43 @@ data:
                     - conditions: "{{ lights_on or (auto_on | default(false) | bool) }}"
                       sequence:
                         # Read current and target states for each light
+                        # Read current state from current scene if available, otherwise from actual light
                         - variables:
                             light_transitions: >-
                               {% set transitions = [] %}
                               {% for light_id in scene_lights %}
                                 {% set current_state = states(light_id) %}
+                                {% set current_brightness = 0 %}
+                                {% set current_color_temp = None %}
+                                {% set current_rgb_color = None %}
+                                {% set current_hs_color = None %}
+                                
+                                {# Try to get current state from current scene first #}
+                                {% if light_id in current_scene_states %}
+                                  {% set current_scene_state = current_scene_states[light_id] %}
+                                  {% if current_scene_state is mapping and 'attributes' in current_scene_state %}
+                                    {% set current_scene_attrs = current_scene_state.attributes %}
+                                    {% set current_brightness = current_scene_attrs.brightness | default(0) | int %}
+                                    {% set current_color_temp = current_scene_attrs.color_temp if 'color_temp' in current_scene_attrs else None %}
+                                    {% set current_rgb_color = current_scene_attrs.rgb_color if 'rgb_color' in current_scene_attrs else None %}
+                                    {% set current_hs_color = current_scene_attrs.hs_color if 'hs_color' in current_scene_attrs else None %}
+                                  {% endif %}
+                                {% endif %}
+                                
+                                {# Fall back to actual light state if not in current scene or if light is actually on #}
+                                {% if is_state(light_id, 'on') and (current_brightness == 0 or current_color_temp is none) %}
+                                  {% set current_brightness = state_attr(light_id, 'brightness') | default(current_brightness) | int %}
+                                  {% set current_color_temp = state_attr(light_id, 'color_temp') if current_color_temp is none else current_color_temp %}
+                                  {% set current_rgb_color = state_attr(light_id, 'rgb_color') if current_rgb_color is none else current_rgb_color %}
+                                  {% set current_hs_color = state_attr(light_id, 'hs_color') if current_hs_color is none else current_hs_color %}
+                                {% endif %}
+                                
                                 {% set light_data = {
                                   'entity_id': light_id,
-                                  'current_brightness': state_attr(light_id, 'brightness') | default(0) | int,
-                                  'current_color_temp': state_attr(light_id, 'color_temp'),
-                                  'current_rgb_color': state_attr(light_id, 'rgb_color'),
-                                  'current_hs_color': state_attr(light_id, 'hs_color'),
+                                  'current_brightness': current_brightness,
+                                  'current_color_temp': current_color_temp,
+                                  'current_rgb_color': current_rgb_color,
+                                  'current_hs_color': current_hs_color,
                                   'target_brightness': 0,
                                   'target_color_temp': None,
                                   'target_rgb_color': None,
@@ -814,6 +841,16 @@ data:
                                 {% set _ = transitions.append(light_data) %}
                               {% endfor %}
                               {{ transitions }}
+    
+                        # Debug: log transition data
+                        - service: "logbook.log"
+                          data:
+                            name: "smooth_transition"
+                            message: >-
+                              Transition data: {{ light_transitions | length }} lights, 
+                              first light: {{ light_transitions[0].entity_id if light_transitions | length > 0 else 'none' }},
+                              current_br={{ light_transitions[0].current_brightness if light_transitions | length > 0 else 'N/A' }},
+                              target_br={{ light_transitions[0].target_brightness if light_transitions | length > 0 else 'N/A' }}
     
                         # Apply color/color_temp transition (using Home Assistant's built-in transition)
                         - repeat:
@@ -844,7 +881,7 @@ data:
                                           {% endif %}
                                           {{ data }}
     
-                        # Apply brightness transition incrementally
+                        # Apply brightness transition incrementally (with color attributes to preserve them)
                         - repeat:
                             count: "{{ brightness_steps | int }}"
                             sequence:
@@ -871,8 +908,17 @@ data:
                                     - service: "light.turn_on"
                                       target:
                                         entity_id: "{{ light.entity_id }}"
-                                      data:
-                                        brightness: "{{ new_brightness }}"
+                                      data_template: >-
+                                        {% set data = {'brightness': new_brightness | int} %}
+                                        {% if light.supports_color_temp and light.target_color_temp is not none %}
+                                          {% set _ = data.update({'color_temp': light.target_color_temp}) %}
+                                        {% endif %}
+                                        {% if light.supports_rgb and light.target_rgb_color is not none %}
+                                          {% set _ = data.update({'rgb_color': light.target_rgb_color}) %}
+                                        {% elif light.supports_hs and light.target_hs_color is not none %}
+                                          {% set _ = data.update({'hs_color': light.target_hs_color}) %}
+                                        {% endif %}
+                                        {{ data }}
                               - delay:
                                   seconds: "{{ brightness_step_seconds }}"
     
